Fixed missing background

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -34,7 +34,7 @@ header {
     width: 100%;
     min-height: 520px;
     max-height: 700px;
-    background: url(../img/your_verse_hero.jpg) 50% 100% no-repeat;
+    background: url(https://web.archive.org/web/20140301004302im_/http://images.apple.com/v/home/as/images/your_verse_hero.jpg) 50% 100% no-repeat;
     background-size: 1440px 1315px;
     position: relative;
     top: -11.5px;
